# dailymandarinthread

./: .gitignore  ARCHITECTURE.md  Caddyfile  Dockerfile.chairmanmao-bot  Dockerfile.chairmanmao-server  Makefile  emojis.json  go.mod  go.sum  pyproject.toml  requirements.txt  roles.json  schema.graphql  setup.cfg  update.py  users.json
.circleci/: config.yml
auth/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg
auth/dmt_auth/: server.py
auth/scripts/: install-python.sh  lint-python.sh
chairmanmao/: Cargo.toml  __init__.py  __main__.py  api.py  api_client.py  chairmanmao.py  discord.py  draw.py  exam.py  filemanager.py  fourchan.py  graphql.py  hanzi.py  main.py  profile.py  server.py  types.py
chairmanmao/cmd/bot/: main.go
chairmanmao/cmd/kafka/: main.go
chairmanmao/cmd/syncbot/: main.go  syncbot.go  types.go  util.go
chairmanmao/cogs/: __init__.py  activity.py  bump.py  comrade.py  draw.py  exam.py  fourchan.py  hanzi.py  invites.py  learners.py  loader.py  moderation.py  owner.py  party.py  socialcredit.py  sync.py  tiananmen.py  voicechat.py  welcome.py
chairmanmao/data/: exams.json  welcome.md
chairmanmao/graphql/: __init__.py  context.py  dataloaders.py  schema.py  types.py  utils.py
chairmanmao/server/: server.go
chairmanmao/src/: api.rs  command_parser.rs  commands.rs  discord.rs  draw.rs  exams.rs  lib.rs  sync.rs
chairmanmao/src/cogs/: jail.rs  mod.rs  social_credit.rs  welcome.rs
chairmanmao/src/exam/: active_exam.rs  exam.rs  loader.rs  message.rs  mod.rs
chairmanmao/store/: document_store.py  memory.py  mongodb.py  types.py
cogs/: bump.py  china.py  log.py
cogs/lib/: __init__.py  __main__.py  lib.py
dailymandarinthreadinfo/: Dockerfile  mkdocs.yml
dailymandarinthreadinfo/docs/: index.md
dailymandarinthreadinfo/docs/assets/: custom.css
dailymandarinthreadinfo/docs/discord/: .pages  channels.md
dailymandarinthreadinfo/docs/method/: about_this_method.md  listening.md  reading.md  words.md
dailymandarinthreadinfo/docs/philosophy/: consistency.md  input_hypothesis.md  read_more.md  utilitarian_outlook.md
dailymandarinthreadinfo/docs/tools/: anki.md
dailymandarinthreadinfo/docs/topics/: .pages  grammar.md  pronunciation.md  tones.md
data/: queries.graphql
data/decks/: hsk1.csv
data/exams/: hsk1.json  hsk2.json  hsk3.json  hsk4.json  hsk5.json  hsk6.json
data/reader_words/: ChineseBreeze_WrongWrongWrong.json  MandarinCompanion_MyTeacherIsAMartian.json
db/: backup.py  clone.py  integrity_check.py  migrate.py  version5_migration.py
db/migrations/: migration_0001_created_last_message_yuan.py  migration_0002_strip_discriminator_from_displayname.py  migration_0003_add_mined.py
dmt_auth/: Dockerfile
dmt_auth/dmt_auth/: __init__.py  server.py
dmt_chairmanmao/: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
dmt_chairmanmao/data/: queries.graphql  welcome.md
dmt_chairmanmao/dmt_chairmanmao/: __init__.py  api.py  chairmanmao.py  config.py  discord.py  draw.py  filemanager.py  fourchan.py  hanzi.py
dmt_chairmanmao/dmt_chairmanmao/cogs/: activity.py  bump.py  comrade.py  draw.py  exam.py  fourchan.py  invites.py  learners.py  loader.py  moderation.py  owner.py  party.py  socialcredit.py  sync.py  tiananmen.py  voicechat.py  welcome.py
dmt_chairmanmao/scripts/: lint-python.sh
dmt_chairmanmao/tests/: test_profiles.py
dmt_dailymandarinthreadinfo/: Caddyfile  Dockerfile
dmt_dailymandarinthreadinfo/docs/: .pages
dmt_dailymandarinthreadinfo/docs/discord/: invite.md  roles.md  socialcredit.md
dmt_dailymandarinthreadinfo/docs/method/: .pages  beginner_goals.md  characters.md
dmt_dailymandarinthreadinfo/docs/philosophy/: .pages  vocabulary.md
dmt_dailymandarinthreadinfo/docs/tools/: .pages  popup_dictionary.md
dmt_dailymandarinthreadinfo/docs/topics/: hanzi.md  pinyin.md
dmt_graphql/: Dockerfile  Makefile  create_legacy_events.py  delete_events_and_mirrors.py  pyproject.toml  recent_events.py  schema.graphql  setup.cfg
dmt_graphql/dmt_graphql/: __init__.py  config.py  events.py  server.py
dmt_graphql/dmt_graphql/graphql/: admin.py  context.py  dataloaders.py  dictionary.py  exam.py  profile.py  schema.py  server_settings.py
dmt_graphql/dmt_graphql/store/: mongodb.py  types.py
dmt_graphql/dmt_graphql/tools/: schema_check.py
dmt_graphql/scripts/: run-ci.sh  test-python.bash
dmt_profiles/: Caddyfile  Dockerfile  package-lock.json  package.json
dmt_profiles/public/: index.html
dmt_profiles/src/: App.tsx
kube/: deployment.chairmanmao-bot.yaml  deployment.chairmanmao-server.yaml  deployment.dmt-auth.yaml  deployment.dmt-chairmanmao.yaml  deployment.dmt-dailymandarinthreadinfo.yaml  deployment.dmt-graphql.yaml  deployment.dmt-profiles.yaml  ingress.yaml  service.chairmanmao-server.yaml  service.dmt-auth.yaml  service.dmt-dailymandarinthreadinfo.yaml  service.dmt-graphql.yaml  service.dmt-profiles.yaml
scripts/: build-containers.sh  demote_stale_ccp.py  download_emojis.py  download_exam.py  import_dictionary.py  last_seen.py  make_token.py  members.py  run-ci.sh  schema.py  setup_server.py  upload_exam.py
server/: __init__.py  server.py
server/graphql/: admin.py  context.py  dataloaders.py  dictionary.py  exam.py  profile.py  schema.py  server_settings.py
server/store/: __init__.py  mongodb.py  types.py
tests/: conftest.py  test_profile.py  test_profiles.py
