[tool.poetry]
name = "chairmanmao"
version = "0.1.0"
description = ""
authors = ["OrangeTacTics"]
readme = "README.md"
homepage = "https://dailymandarinthread.info"
repository = "https://github.com/OrangeTacTics/chairmanmao"

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^1.7.3"
Pillow = "^8.3.2"
pymongo = "^3.12.0"
boto3 = "^1.18.44"
httpx = "^0.19.0"
strawberry-graphql = "0.83.5"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
requests = "^2.26.0"
PyJWT = "^2.1.0"
python-dotenv = "^0.19.0"
dnspython = "^2.1.0"
websockets = "^10.0"
dragonmapper = "^0.2.6"
python-ulid = "^1.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.5"
black = "^21.9b0"
pytest_asyncio = "^0.16.0"

[tool.poetry.scripts]
chairmanmao = "chairmanmao:main"
server = "server:main"
server-testing = "server:main_test"
schema = "scripts.schema:main"

[tool.black]
line-length = 120
