[metadata]
name = dmt-graphql
version = 0.1.0

[options]
zip_safe = True
include_package_data = True
install_requires =
    httpx==0.19.0
    fastapi==0.68.1
    uvicorn==0.15.0
    PyJWT==2.1.0
    python-dotenv==0.19.0

[mypy]
strict_optional = True
follow_imports = normal
files = dmt_auth/**/*.py
mypy_path = .

[mypy-uvicorn.*]
ignore_missing_imports = True

[flake8]
ignore = \
    E265,\ # Comments start with '# '
    E115,\ # Comments not indented
    E122,\ # Continuation line missing indentation or outdented
    W504,\ # Line break after operator
    E261,\ # at least two spaces before inline comment
    F541,\ # f-string is missing placeholders
    E203,\ # whitespace before ':'
    W503,\ # line break before binary operator
    E722,\ # do not use bare 'except'
    E501   # Line too long

exclude = .git,__pycache__,tests,.venv,venv,db,scripts

per-file-ignores = \
    ./dmt_graphql/server.py: E303
