[package]
name = "chairmanmao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { default-features = false, version = "0.3" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tracing = "0.1"
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log"], version = "0.3" }
twilight = "0.9.0"
twilight-http = "0.9.0"
twilight-model = "0.9.0"
twilight-gateway = "0.9.0"
twilight-embed-builder = "0.9.0"
twilight-util = { version = "0.9.0", features = ["builder"] }
rusttype = "0.9.2"
image = "0.23.14"
rand = { version = "0.8.4", features = ["std_rng"] }
serde_json = "1.0.74"
serde = "1.0.133"
clap = { version = "3.0", features = ["derive"] }
mongodb = "2.1.0"
redis = "0.21.5"

[lib]
name = "chairmanmao"
path = "src/lib.rs"

[[bin]]
name = "chairmanmao-cli"
path = "src/bin/chairmanmao_cli.rs"

[[bin]]
name = "chairmanmao"
path = "src/bin/chairmanmao.rs"

[[bin]]
name = "draw"
path = "src/bin/draw.rs"

[[bin]]
name = "exam"
path = "src/bin/exam.rs"

[[bin]]
name = "chairmanmao-examiner"
path = "src/bin/chairmanmao_examiner.rs"
