[metadata]
name = dmt-graphql
version = 0.1.0

[options]
zip_safe = True
include_package_data = True
install_requires =
    py-cord==1.7.3
    Pillow==8.3.2
    pymongo==3.12.0
    boto3==1.18.44
    httpx==0.19.0
    strawberry-graphql==0.83.5
    fastapi==0.68.1
    uvicorn==0.15.0
    requests==2.26.0
    PyJWT==2.1.0
    python-dotenv==0.19.0
    dnspython==2.1.0
    websockets==10.0
    dragonmapper==0.2.6
    python-ulid==1.0.3

[mypy]
strict_optional = True
follow_imports = normal
files = chairmanmao/**.py,server/**.py
mypy_path = .
plugins = strawberry.ext.mypy_plugin

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-pymongo.*]
ignore_missing_imports = True

[mypy-bson.*]
ignore_missing_imports = True

[mypy-graphene.*]
ignore_missing_imports = True

[mypy-discord.*]
ignore_missing_imports = True

[mypy-boto3.*]
ignore_missing_imports = True

[mypy-uvicorn.*]
ignore_missing_imports = True

[mypy-dragonmapper.*]
ignore_missing_imports = True

[flake8]
ignore = \
    E265,\ # Comments start with '# '
    E115,\ # Comments not indented
    E122,\ # Continuation line missing indentation or outdented
    W504,\ # Line break after operator
    E261,\ # at least two spaces before inline comment
    F541,\ # f-string is missing placeholders
    E203,\ # whitespace before ':'
    W503,\ # line break before binary operator
    E722,\ # do not use bare 'except'
    E501   # Line too long

exclude = .git,__pycache__,tests,.venv,db,scripts

per-file-ignores = \
    ./server/server.py: E303
